src/test/resources/private/typechecking/pass/access/access_pass_method_04.jova
class Test{
  private int x;
  public int pleaseTouchMe(int x){
    return this.x;
  }
}

class Testing {
  private Test t;
  public int test() {
        return t.pleaseTouchMe(0);
    }
}