src/test/resources/private/typechecking/fail/this/this_03_return_this.jova
class Test{
    public int test(int x) {
        return this;
    }
}